--- a/index.html
+++ b/index.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/boostrap.css" rel="stylesheet" type="text/css"
     <link href="css/styles.css" rel="stylesheet" type="text/css"
-    <script src="myScript.js"></script>
+    <script src="js/Scripts.js"></script>
     <title>AKAN NAMING SYSTEM</title>
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-50">
-          <h1>AKAN NAMING SYSTEM</h1>
-          <p>This application takes your birthday and calculates the day of the week your born
-            and then depending on your gender outputs your Akan name.Akan names are derived from
-            Ghanian culture where children are given their first name as a day name which correspond to the
-             day in the week they were born  therefore it help you to know the day of the week you born for most people do know when their birthdays are,but some might not know what day of the week they are born.</p>
-       </div>
-      </div>
+  <div class="container">
+    <h1>AKAN NAMING SYSTEM</h1>
+    <p>This application takes your birthday and calculates the day of the week your born
+    and then depending on your gender outputs your Akan name.Akan names are derived from
+    Ghanian culture where children are given their first name as a day name which correspond to the
+    day in the week they were born  therefore it help you to know the day of the week you born for   most people do know when their birthdays are,but some might not know what day of the week they are born.</P>
 
 
   </body>
