add birthday form to index.html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
     and then depending on your gender outputs your Akan name.Akan names are derived from
     Ghanian culture where children are given their first name as a day name which correspond to the
     day in the week they were born  therefore it help you to know the day of the week you born for   most people do know when their birthdays are,but some might not know what day of the week they are born.</P>
+   <div class="row">
+     <div class="col-md-50">
+       <h2>Enter your birthday in this form</h2>
+       <form>
+  <label for="birthday">Birthday:</label>
+  <input type="date" id="birthday" name="birthday">
+</form>
+</div>
+</div>
+
 
 
   </body>
