--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
 </form>
 </div>
 </div>
+<div class="col-md-75">
+  <h3>Choose your gender</h3>
+  <form>
+  <input type="radio" id="male" name="gender" value="male">
+  <label for="male">Male</label><br>
+  <input type="radio" id="female" name="gender" value="female">
+  <label for="female">Female</label><br>
+  <input type="radio" id="other" name="gender" value="other">
+  <label for="other">Other</label>
+</form>
 
 
 
