add Scripts.js to the page to check on whether date and month enter is valid or invalid and if invalid it alert

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <input type="radio" id="other" name="gender" value="other">
   <label for="other">Other</label>
 </form>
-
+<input type="button" onclick="alert('your name is+""')" value="Click Me!">
 
 
   </body>
